masternode/config/lab-jaeger-istio-nodejs/istio-nodejs.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: service-customer
  labels:
    app: service-customer
spec:
  ports:
    - port: 8080
      name: http
  selector:
    app: service-customer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-customer
  labels:
    app: service-customer
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-customer
  template:
    metadata:
      labels:
        app: service-customer
        version: v1
      annotations:
        sidecar.istio.io/inject: "true"
    spec:
      containers:
        - name: app
          image: danielribeirojr/service-customer-nodejs-istio
          #image: image-registry.openshift-image-registry.svc:5000/default/service-customer-nodejs-istio
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: service-score
  labels:
    app: service-score
spec:
  ports:
    - port: 8081
      name: http
  selector:
    app: service-score
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-score
  labels:
    app: service-score
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-score
  template:
    metadata:
      labels:
        app: service-score
        version: v1
      annotations:
        sidecar.istio.io/inject: "true"
    spec:
      containers:
        - name: app
          image: danielribeirojr/service-score-nodejs-istio
          #image: image-registry.openshift-image-registry.svc:5000/default/service-score-nodejs-istio
          imagePullPolicy: Always
          ports:
            - containerPort: 8081
